changed urls to plural forms, added get plant by id
